<resources>
    <string name="app_name">优品严选</string>
    <string name="net_wrok_unconnetion_text">网络连接失败</string>

    <string name="tab_homepage">首页</string>
    <string name="tab_nine_point_nine">9.9包邮</string>
    <string name="tab_type">分类</string>
    <string name="tab_my">我的</string>
    <!--注册-->
    <string name="register_title">注册</string>
    <string name="register_name">昵称</string>
    <string name="register_name_hint">请输入您的昵称</string>
    <string name="register_phone">手机号</string>
    <string name="register_phone_hint">请输入您的手机号</string>
    <string name="register_phone_hint2">您输入的手机号有误，请重试</string>
    <string name="register_code">验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_psw">密码</string>
    <string name="register_psw_hint">请输入6-18位密码</string>
    <string name="register_psw_hint2">密码为6-18位，请重试</string>
    <string name="register_invate_code">邀请码</string>
    <string name="register_invate_code_hint">请输入邀请码</string>
    <string name="register_licence">点击"注册"表示您已经同意《用户协议》</string>
    <string name="register_login">已有账号？点击登录</string>
    <string name="register_fail">注册失败请重试！</string>
    <string name="register_succeed">注册成功！</string>
    <string name="register_validate_code_succeed">验证码发送成功！</string>
    <string name="register_validate_code_fail">验证码发送失败！</string>
    <!--登录-->
    <string name="login_succeed">登录成功！</string>
    <string name="login_fail">登录失败！</string>
    <string name="login_title">登录</string>
    <string name="login_accout">账号</string>
    <string name="login_accout_hint">请输入您的手机号</string>
    <string name="login_psw">密码</string>
    <string name="login_psw_hint">请输入6-18位密码</string>
    <string name="login_fast_register">快速注册</string>
    <string name="login_find_psw">找回密码</string>
    <!--找回密码-->
    <string name="find_psw_title">修改密码</string>
    <string name="find_psw_phone">手机号</string>
    <string name="find_psw_phone_hint">请输入您的手机号</string>
    <string name="find_psw_phone_hint2">您输入的手机号有误，请重试</string>
    <string name="find_psw_validate_code">验证码</string>
    <string name="find_psw_validate_code_hint">请输入验证码</string>
    <string name="find_psw_new_psw">新密码</string>
    <string name="find_psw_new_psw_hint">请输入新密码</string>
    <string name="find_psw_new_psw_hint2">密码为6-18位，请重试</string>
    <string name="find_psw_get_code">获取验证码</string>
    <string name="find_psw_confirm">确定</string>
    <string name="find_psw_succeed">修改成功</string>
    <string name="find_psw_fail">修改失败</string>
    <!--我的-->
    <string name="mine_title">我的</string>
    <string name="mine_hint">请先登录/注册</string>
    <string name="mine_personal_info">个人信息</string>
    <string name="mine_alter_psw">修改密码</string>
    <string name="mine_alter_active_code">修改激活码</string>
    <string name="mine_check_update">检查版本</string>
    <!--个人信息-->
    <string name="personal_title">个人信息</string>
    <string name="personal_head_img">头像</string>
    <string name="personal_head_name">昵称</string>
    <string name="personal_alter_nick_name">修改昵称</string>
    <string name="personal_head_name_hint">请输入昵称</string>
    <string name="personal_head_phone">手机号</string>
    <string name="personal_head_sex">性别</string>
    <string name="personal_exit">退出登录</string>
    <string name="personal_fail">获取个人信息失败</string>
    <string name="personal_confirm">确定</string>
    <string name="personal_alter_success">修改成功</string>
    <string name="personal_alter_active_code">修改激活码</string>
    <string name="personal_active_code">激活码</string>
    <string name="personal_active_code_hint">请填写新的激活码</string>
</resources>
