<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/head_title_bar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/distance_10dp"
                android:layout_marginBottom="@dimen/distance_10dp"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iv_head"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher"
                    />
        </RelativeLayout>

        <RelativeLayout
                android:paddingLeft="@dimen/distance_15dp"
                android:paddingRight="@dimen/distance_15dp"
                android:paddingTop="@dimen/distance_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/register_name_text"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:text="@string/login_accout"
                    />

            <EditText
                    android:text="18686703845"
                    android:inputType="phone"
                    android:layout_marginRight="@dimen/distance_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:hint="@string/login_accout_hint"
                    android:id="@+id/login_accout"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/distance_25dp"
                    android:layout_toRightOf="@+id/register_name_text"
                    android:layout_toLeftOf="@+id/iv_login_delete"
                    />

            <ImageView
                    android:id="@+id/iv_login_delete"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    />
        </RelativeLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/distance_10dp"
                android:layout_marginRight="@dimen/distance_10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/distance_10dp"
                android:background="@color/gray"
                />

        <RelativeLayout
                android:paddingLeft="@dimen/distance_15dp"
                android:paddingRight="@dimen/distance_15dp"
                android:paddingTop="@dimen/distance_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/register_psw_text"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:text="@string/login_psw"
                    />

            <EditText
                    android:text="123456"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:hint="@string/login_psw_hint"
                    android:id="@+id/login_psw"
                    android:layout_toLeftOf="@+id/cb_login_hide"
                    android:layout_marginRight="@dimen/distance_5dp"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/distance_25dp"
                    android:layout_toRightOf="@+id/register_psw_text"
                    />

            <CheckBox
                    android:id="@+id/cb_login_hide"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:button="@mipmap/ic_launcher"
                    />


        </RelativeLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/distance_10dp"
                android:layout_marginRight="@dimen/distance_10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/distance_10dp"
                android:background="@color/gray"
                />


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_25dp"
                >

            <Button
                    android:id="@+id/btn_login"
                    android:textSize="@dimen/font_size_18sp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/distance_35dp"
                    android:text="@string/login_title"
                    android:background="@drawable/shape_btn_circle_corner_red"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:layout_marginRight="@dimen/distance_15dp"
                    android:layout_centerInParent="true"
                    />


        </RelativeLayout>

        <LinearLayout
                android:id="@+id/ll"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/btn_register"
                android:layout_marginTop="@dimen/distance_15dp"
                >

            <LinearLayout
                    android:padding="@dimen/distance_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                <TextView
                        android:id="@+id/tv_login_fast_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/base_red"
                        android:text="@string/login_fast_register"
                        android:textSize="@dimen/font_size_16sp"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">

                <TextView
                        android:text="@string/login_find_psw"
                        android:id="@+id/tv_login_find_psw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/base_red"
                        android:textSize="@dimen/font_size_16sp"
                        />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>