<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
            layout="@layout/head_title_bar"
            android:baselineAligned="false"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <RelativeLayout
                android:paddingLeft="@dimen/distance_15dp"
                android:paddingRight="@dimen/distance_15dp"
                android:paddingTop="@dimen/distance_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/register_name_text"
                    android:textColor="@color/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:text="@string/personal_active_code"
                    />

            <EditText
                    android:layout_marginRight="@dimen/distance_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:hint="@string/personal_active_code_hint"
                    android:id="@+id/personal_name"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/distance_25dp"
                    android:layout_toRightOf="@+id/register_name_text"
                    android:layout_toLeftOf="@+id/iv_login_delete"
                    />

        </RelativeLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/distance_10dp"
                android:layout_marginRight="@dimen/distance_10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/distance_10dp"
                android:background="@color/gray"
                />


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_25dp"
                >

            <Button
                    android:id="@+id/btn_confirm"
                    android:textSize="@dimen/font_size_18sp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/distance_35dp"
                    android:text="@string/personal_confirm"
                    android:background="@drawable/shape_btn_circle_corner_red"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:layout_marginRight="@dimen/distance_15dp"
                    android:layout_centerInParent="true"
                    />


        </RelativeLayout>

    </LinearLayout>


</LinearLayout>