<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#f7f7f7"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/comm_head_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxEms="8"
                android:layout_marginTop="@dimen/distance_10dp"
                android:text="@string/mine_title"
                android:textColor="@color/white"
                android:textSize="@dimen/title_textsize"/>


        <RelativeLayout
                android:layout_marginTop="@dimen/distance_20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <ImageView
                    android:id="@+id/iv_mine_head_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/touxiang"
                    />

            <TextView
                    android:id="@+id/tv_mine_login"
                    android:layout_toRightOf="@+id/iv_mine_head_img"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_18sp"
                    android:text="@string/mine_hint"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/distance_10dp"
                    />

            <ImageView
                    android:id="@+id/iv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/distance_15dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/gengduobai"
                    />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >

        <RelativeLayout
                android:id="@+id/rl_mine_personal_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_50dp"
                >

            <TextView
                    android:drawableLeft="@drawable/gerenxinxi"
                    android:drawablePadding="@dimen/distance_10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:textSize="@dimen/font_size_16sp"
                    android:text="@string/mine_personal_info"
                    android:layout_alignParentLeft="true"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="@dimen/distance_20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gengduo"
                    />

        </RelativeLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/distance_15dp"
                android:layout_marginRight="@dimen/distance_15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cccccc"
                />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_50dp"
                android:id="@+id/rl_mine_alter_psw"
                >

            <TextView
                    android:drawableLeft="@drawable/xiugaimima"
                    android:drawablePadding="@dimen/distance_10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:textSize="@dimen/font_size_16sp"
                    android:text="@string/mine_alter_psw"
                    android:layout_alignParentLeft="true"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="@dimen/distance_20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gengduo"
                    />

        </RelativeLayout>

        <LinearLayout

                android:layout_marginLeft="@dimen/distance_15dp"
                android:layout_marginRight="@dimen/distance_15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cccccc"
                />

        <RelativeLayout
                android:id="@+id/rl_mine_alter_active_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_50dp"
                >

            <TextView
                    android:drawableLeft="@drawable/xiugaijihuoima"
                    android:drawablePadding="@dimen/distance_10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:textSize="@dimen/font_size_16sp"
                    android:text="@string/mine_alter_active_code"
                    android:layout_alignParentLeft="true"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="@dimen/distance_20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gengduo"
                    />

        </RelativeLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/distance_15dp"
                android:layout_marginRight="@dimen/distance_15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cccccc"
                />

        <RelativeLayout
                android:id="@+id/rl_mine_check_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/distance_50dp"
                >

            <TextView
                    android:drawableLeft="@drawable/jianchabanben"
                    android:drawablePadding="@dimen/distance_10dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/distance_15dp"
                    android:textSize="@dimen/font_size_16sp"
                    android:text="@string/mine_check_update"
                    android:layout_alignParentLeft="true"
                    />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="@dimen/distance_20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gengduo"
                    />

        </RelativeLayout>

        <LinearLayout
                android:layout_marginLeft="@dimen/distance_15dp"
                android:layout_marginRight="@dimen/distance_15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cccccc"
                />
    </LinearLayout>
</LinearLayout>